# devops-helper

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
core/: Cargo.toml
core/src/: audit.rs  crypto.rs  error.rs  lib.rs
core/src/db/: mod.rs
core/src/keys/: mod.rs  vault.rs
core/src/monitor/: docker.rs  host.rs  mod.rs  trust.rs
core/src/scenarios/: bastion.rs  mod.rs  presets.rs
core/src/session/: manager.rs  mod.rs
core/src/sftp/: mod.rs
core/src/sync/: ignore.rs  mod.rs
core/src/updates/: apt.rs  distro.rs  dnf.rs  mod.rs  osv.rs  types.rs  upgrade.rs
src/: App.tsx  api.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/components/: ActivityLogSection.tsx  ContextMenu.tsx  HostKeyDialog.tsx  KeysPanel.tsx  MainNav.tsx  MonitorPanel.tsx  ScenariosPanel.tsx  ServerForm.tsx  ServerFormModal.tsx  ServerList.tsx  SettingsPanel.tsx  SftpPanel.tsx  Sidebar.tsx  SyncPanel.tsx  TerminalPanel.tsx  TerminalView.tsx  UpdatesPanel.tsx
src/components/sync/: DirectionToggle.tsx  SyncPreviewList.tsx  SyncSetupSheet.tsx  syncUtils.ts
src/config/: nav.ts
src/context/: ThemeContext.tsx  UiContext.tsx
src/state/: persist.ts
src/theme/: applyTheme.ts  presets.ts  types.ts
src/utils/: backendError.ts  connectServer.ts  serverAccess.ts
