[workspace]
members = ["core", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BriskBastion"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
russh = "0.61"
russh-sftp = "2.3"
aws-lc-rs = { version = "1", features = ["prebuilt-nasm"] }
aes-gcm = "0.10"
rand = "0.10"
getrandom = "0.2"
ssh-key = "0.7.0-rc.10"
keyring = "3"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
tracing = "0.1"
serde_yaml = "0.9"
async-trait = "0.1"
futures = "0.3"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
