[package]
name = "brisk-bastion-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core SSH, key vault, SFTP sync and scenario engine for BriskBastion"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
russh.workspace = true
russh-sftp.workspace = true
aws-lc-rs.workspace = true
aes-gcm.workspace = true
getrandom.workspace = true
ssh-key.workspace = true
rand.workspace = true
keyring.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
log.workspace = true
serde_yaml.workspace = true
async-trait.workspace = true
futures.workspace = true
dirs.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
