[package]
name = "brisk-bastion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BriskBastion - SSH terminal and automation tool"

[lib]
name = "brisk_bastion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
brisk-bastion-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
tauri-plugin-prevent-default = { version = "5", features = ["platform-windows"] }
